themes/tria-2019/source/css/_content.styl
[role='main'], footer

  h2, h3
    font-weight 400
    text-align center
    text-transform uppercase

  h2, h3, ol, ul, dl, pre, blockquote, iframe
    color var(--color-body)
    font-size 1.8rem
    line-height 1.618
    margin-bottom 16px

  pre
    margin-bottom 1.2rem
    margin-top 1.2rem

  h2
    color purple
    letter-spacing 0.15rem
    margin 2.4rem 0

  h3
    text-align left

  p
    text-align justify
    text-rendering optimizeLegibility

  ol, ul
    margin-left 3.6rem

  dl
    font-size 0.9rem
    margin-bottom 1.8rem

  dd, blockquote, blockquote p, figcaption
    color mix(black, alabaster, 45%)
    font-size 1.2rem
    font-style oblique
    margin-bottom 1.2rem
    margin-left 1.2rem
    margin-right 1.2rem

  blockquote p
    font-size 1.6rem
    margin-left 0

  blockquote p code
    font-size 1.4rem

  dt, dd
    font-size 1.4rem

  figcaption
    font-size 0.7rem
    margin 0.3rem 0.6rem 0.6rem
    text-align center

  pre, blockquote
    border-left 0.2rem solid var(--color-background--tertiary)
    margin-left 1.2rem
    padding-left 1.2rem

  pre, code
    font-family 'Fira Mono'
    font-size 1.5rem
    text-rendering auto

  pre
    width calc(100% - 2.4rem)

  p code,
  li code
    display inline-block
    padding 0 8px

    background-color var(--color-background--secondary)
    border-radius 4px

    font-style normal
    line-height 2.4rem

  figure table
    width 100%

    pre
      margin-top 0

  strong
    font-weight 500

  img, iframe
    display block
    max-width 480px
    margin 1.2rem auto

  // Disqus <iframe> shouldn't follow the same rules.
  iframe#dsq-2
    max-width 100% // 40.0rem

  img
    border-radius 0.5rem

    &.inline
      border-radius 0
      box-shadow none

  iframe
    min-height 15.0rem
    width 100%

  hr
    border none
    height 1px
    background-color darken(alabaster, 25%)
    margin-bottom 16px
    width 25%
    margin 2.4rem auto

footer
  font-size 0.9rem

#copyright
  color shadow
  font-size 1.2rem
  text-align center
  margin-bottom 1.2rem


// "Next"/"Previous" post navigation

[role='main'] nav

  overflow hidden

  .post-nav-prev,
  .post-nav-next
    display block
    margin-bottom 1.6rem

    font-size 1.4rem
    line-height 21px

  .post-nav-prev a
      background-position left -8px center
      padding-left 14px

  .post-nav-next
    text-align right

    a
      background-position right -8px center
      padding-right 14px

  a
    display block
    background-image url('../images/nav.png')
    background-repeat no-repeat
    background-size 15px 21px

@media screen and (min-width: 550px)

  [role='main'] nav
    margin 1.2rem 0
    width 100%

    .post-nav-prev,
    .post-nav-next
      vertical-align middle

      &, a
        min-width 265px
        width 40%

      a
        display inline-block

    .post-nav-prev
      float left
      a
        padding-left 18px

    .post-nav-next
      float right
      a
        padding-right 18px

// Talk List (Speaking page)

.talk-list
  list-style-type none
  margin-left 0 !important // HACK

  > li + li
    margin-top 1.2em

  figure
    align-items center
    display flex
    flex-direction column

    @media screen and (min-width: 512px)
      &
        flex-direction row

  figcaption
    flex-grow 1
    font-style normal // RESET
    margin 0 // RESET
    margin-top 0.6rem
    text-align center

    @media screen and (min-width: 512px)
      &
        margin-left 1.2rem
        margin-top 0
        text-align left

  img
    flex-shrink 0
    margin 0 // RESET
    width 224px

  h2
    font-size 1.6rem
    margin 0 // RESET
    text-align inherit // RESET

  p
    color mix(black, alabaster, 45%)
    font-size 1.4rem
    font-style oblique
    margin 0 // RESET
    margin 0 1.2rem
    text-align inherit

  ul
    display flex
    font-size 1.6rem
    list-style-type none
    justify-content center
    margin 0
    margin-top 0.6rem
    text-transform capitalize

    @media screen and (min-width: 512px)
      &
        justify-content flex-start

    li + li
      margin-left 1.2rem

